fix: profile menu icon overlapping content

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -187,11 +187,8 @@
   outline-offset: -3px;
 }
 
-.navatar {
-  display: contents;
-}
-
 .navatar .avatar-nav-link {
+  display: block;
   height: 31px;
   width: 31px;
 }
